fix: wrong label value

--- a/prepara_pedido.html
+++ b/prepara_pedido.html
@@ -58,7 +58,7 @@
               <option value="mediana">Mediana</option>
               <option value="grande" selected>Grande</option>
             </select>
-            <label for="tamaño">Ingredientes:</label>
+            <label>Ingredientes:</label>
             <div class="checkbox">
               <label><input name="ingredientes" type="checkbox" value="jamon" />Jamón York</label>
               <label><input name="ingredientes" type="checkbox" value="champis" />Champiñones</label>
