feat: added new pizza size

--- a/prepara_pedido.html
+++ b/prepara_pedido.html
@@ -56,7 +56,8 @@
             <select id="tamaño" name="tamaño">
               <option value="peque">Pequeña</option>
               <option value="mediana">Mediana</option>
-              <option value="grande" selected>Grande</option>
+              <option value="grande">Grande</option>
+              <option value="xxl" selected>XXL</option>
             </select>
             <label>Ingredientes:</label>
             <div class="checkbox">
