feat: add new size availability logic

--- a/prepara_pedido.html
+++ b/prepara_pedido.html
@@ -54,11 +54,12 @@
           <div class="formulario__content">
             <label for="tamaño">Tamaño de la Pizza:</label>
             <select id="tamaño" name="tamaño">
-              <option value="peque">Pequeña</option>
-              <option value="mediana">Mediana</option>
-              <option value="grande">Grande</option>
-              <option value="xxl" selected>XXL</option>
+              <option value="S">Pequeña</option>
+              <option value="M">Mediana</option>
+              <option value="G">Grande</option>
+              <option value="XXL">XXL</option>
             </select>
+            <div id="size_availability" class="availability"></div>
             <label>Ingredientes:</label>
             <div class="checkbox">
               <label><input name="ingredientes" type="checkbox" value="jamon" />Jamón York</label>
