fix: label placement from bottom to right
Also as part of this commit I have fix that the default value also
triggers a back-end call and that any value different from "Disponible"
will prevent to updload the form.

--- a/prepara_pedido.html
+++ b/prepara_pedido.html
@@ -53,13 +53,15 @@
           </div>
           <div class="formulario__content">
             <label for="tamaño">Tamaño de la Pizza:</label>
-            <select id="tamaño" name="tamaño">
-              <option value="S">Pequeña</option>
-              <option value="M">Mediana</option>
-              <option value="G">Grande</option>
-              <option value="XXL">XXL</option>
-            </select>
-            <div id="size_availability" class="availability"></div>
+            <div class="size_input">
+              <select id="tamaño" name="tamaño">
+                <option value="S">Pequeña</option>
+                <option value="M">Mediana</option>
+                <option value="G">Grande</option>
+                <option value="XXL">XXL</option>
+              </select>
+              <span id="size_availability" class="availability"></span>
+            </div>
             <label>Ingredientes:</label>
             <div class="checkbox">
               <label><input name="ingredientes" type="checkbox" value="jamon" />Jamón York</label>
