fix(pizza size): Replace G with L

--- a/prepara_pedido.html
+++ b/prepara_pedido.html
@@ -57,7 +57,7 @@
               <select id="tamaño" name="tamaño">
                 <option value="S">Pequeña</option>
                 <option value="M">Mediana</option>
-                <option value="G">Grande</option>
+                <option value="L">Grande</option>
                 <option value="XXL">XXL</option>
               </select>
               <span id="size_availability" class="availability"></span>
